# geti-instant-learn

./: .cursorrules  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .release-please-manifest.json  .semgrepignore  CONTRIBUTING.md  README.MD  README.md  REFACTOR_PLAN.md  dinotxt.py  example_validation.py  export_sam.py  export_sam_decoder.py  ground_example.py  matcher_example.py  matcher_inference_model.py  release-please-config.json  rename.sh  test_onnx_patches.py  test_tracing.py  test_validation.py  third-party-programs.txt  validate_samhq_models.py
application/backend/: .gitignore  Justfile  geti-prompt.spec  instant-learn.spec  justfile  openapi.py  pyproject.toml
application/backend/app/: __init__.py  alembic.ini  dependencies.py  main.py  routers.py  settings.py
application/backend/app/alembic/: README.md  env.py
application/backend/app/alembic/versions/: 2025_09_02_1050-8b19996bfac7_create_db_tables.py  2025_10_06_1259-e97abb1756ca_create_db_tables.py  2025_10_07_1055-80b4e8ca793f_create_db_tables.py
application/backend/app/api/: error_handler.py  routers.py
application/backend/app/api/endpoints/: __init__.py  datasets.py  devices.py  frames.py  labels.py  license.py  model_status.py  models.py  projects.py  prompts.py  sinks.py  source_types.py  sources.py  stream.py  webrtc.py
application/backend/app/core/components/: base.py  broadcaster.py  processor.py  sink.py  source.py
application/backend/app/core/runtime/: dispatcher.py  pipeline.py  pipeline_manager.py
application/backend/app/db/: __init__.py  constraints.py  engine.py  models.py
application/backend/app/db/model/: __init__.py  annotation.py  label.py  processor.py  project.py  prompt.py
application/backend/app/db/models/: __init__.py  annotation.py  processor.py  project.py  prompt.py  sink.py  source.py
application/backend/app/domain/: dispatcher.py  errors.py
application/backend/app/domain/alembic/: README.md  env.py  script.py.mako
application/backend/app/domain/db/: __init__.py  constraints.py  engine.py  models.py
application/backend/app/domain/repositories/: annotation.py  base.py  frame.py  label.py  processor.py  project.py  prompt.py  sink.py  source.py  supported_model.py
application/backend/app/domain/services/: __init__.py  base.py  dataset_discovery.py  dataset_registry.py  label.py  model.py  project.py  prompt.py  sink.py  source.py  thumbnail.py
application/backend/app/exceptions/: custom_errors.py  handler.py
application/backend/app/repositories/: base.py  frame.py  label.py  project.py  prompt.py  source.py
application/backend/app/rest/: dependencies.py
application/backend/app/rest/endpoints/: __init__.py  frames.py  labels.py  projects.py  prompts.py  sinks.py  sources.py  webrtc.py
application/backend/app/rest/mappers/: project.py
application/backend/app/rest/schemas/: processor.py  project.py  sink.py  source.py
application/backend/app/runtime/: components.py  errors.py  pipeline_manager.py  telemetry.py
application/backend/app/runtime/services/: cpu_monitor.py  dataset_discovery.py  device.py  frame.py  frame_resolution.py  image_thumbnail.py  license.py  mjpeg_stream.py  model_load_error.py  reference_batch.py  source_type.py
application/backend/app/runtime/webrtc/: manager.py  sdp_handler.py  stream.py  visualizer.py
application/backend/app/services/: __init__.py  common.py  errors.py  frame.py  label.py  pipeline_manager.py  project.py  prompt.py  source.py
application/backend/app/services/mappers/: source.py
application/backend/app/services/schemas/: annotation.py  base.py  label.py  processor.py  project.py  prompt.py  sink.py  source.py  webrtc.py
application/backend/app/webrtc/: manager.py  stream.py
application/backend/pyinstaller/: hook-setenv.py  setenv.py
application/backend/pyinstaller/windows/: proxy.py  uwp.py
application/backend/tests/: conftest.py
application/backend/tests/integration/: conftest.py
application/backend/tests/integration/fixtures/: database.py
application/backend/tests/integration/repository/: test_frame_repository.py  test_label.py  test_project_repository.py  test_prompt_repository.py  test_source_repository.py
application/backend/tests/unit/api/: test_cache_utils.py  test_dependencies_dataset_path.py
application/backend/tests/unit/domain/: test_dispatcher.py
application/backend/tests/unit/endpoints/: test_frames_endpoints.py  test_labels.py  test_projects_endpoints.py  test_prompts_endpoints.py  test_sources_endpoints.py  test_webrtc.py
application/backend/tests/unit/runtime/: test_components.py  test_owned_lock.py  test_pipeline_manager.py  test_telemetry.py  test_visualizer.py
application/backend/tests/unit/services/: test_frame_service.py  test_label.py  test_pipeline_manager.py  test_project_service.py  (+2 more)
lib/: README.md  pyproject.toml
lib/examples/: dinov3.ipynb  dinov3_zero_shot_classification.ipynb
lib/src/getiprompt/: __init__.py  benchmark.py  cli.py  run.py
lib/src/getiprompt/datasets/: __init__.py  dataset_base.py  dataset_iterator_base.py  dataset_iterators.py
lib/src/getiprompt/filters/: __init__.py  filter_base.py
lib/src/getiprompt/models/: __init__.py  dino.py  dinotxt.py  dinov2.py  grounding_dino.py  model_optimizer.py  models.py
lib/src/getiprompt/pipelines/: __init__.py  grounded_sam_pipeline.py  grounding_dino.py  matcher_pipeline.py  perdino_pipeline.py  persam_mapi_pipeline.py  persam_pipeline.py  pipeline_base.py  pipeline_factory.py  softmatcher_pipeline.py
lib/src/getiprompt/processes/: __init__.py  process_base.py
lib/src/getiprompt/types/: __init__.py  masks.py
lib/src/getiprompt/utils/: __init__.py  args.py  constants.py  transforms.py  utils.py
lib/src/web_ui/: __init__.py  app.py  helpers.py
lib/tests/: README.md  __init__.py
lib/tests/filters/: __init__.py
lib/tests/filters/masks/: __init__.py  test_box_aware_mask_filter.py
lib/tests/models/: __init__.py  test_dino.py
lib/tests/pipelines/: __init__.py  test_dinotxt.py  test_sam_decoder.py
lib/tests/processes/encoders/: __init__.py  test_dino_encoder.py
(+1266 files in other folders)
