# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
# SETUP CONFIGURATION.                                                        #
[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "getiprompt"
version = "0.1.0"
authors = [
  { name="Daan Krol", email="daan.krol@intel.com" },
  { name="Klaas Dijkstra", email="klaas.dijkstra@intel.com" },
]
description = "Geti Prompt - A modular framework for visual prompting"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
# REQUIREMENTS                                                                #
dependencies = [
    "matplotlib==3.10.3",
    "numpy==1.26.4",
    "opencv-python==4.11.0.86",
    "flask==3.1.1",
    "rich==14.0.0",
    "requests==2.32.4",
    "pycocotools==2.0.9",
    "scipy==1.15.3",
    "pot==0.9.5",
    "umap==0.1.1",
    "pandas==2.2.3",
    "scikit-learn==1.6.1",
    "openvino-model-api==0.3.0.2",
    "torch==2.7.0+cu126",
    "torchvision==0.22.0+cu126",
    "efficientvit",
    "segment-anything-hq==0.3",
    "pytorch-labs-segment-anything-fast",
    "markupsafe==3.0.2",
    "jsonargparse",
    "sam-2",
]

[tool.uv.sources]
markupsafe = { index = "pypi" }
torch = { index = "pytorch" }
xformers = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchmetrics = { index = "pytorch" }
efficientvit = { git = "https://github.com/mit-han-lab/efficientvit.git", rev = "71b35be" }
pytorch-labs-segment-anything-fast = { git = "https://github.com/pytorch-labs/segment-anything-fast.git", rev = "e6aadeb"}
sam-2 = { git = "https://github.com/facebookresearch/sam2.git", rev = "2b90b9f"}

[project.scripts]
getiprompt = "getiprompt.cli:main"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"

[tool.hatch.build.targets.wheel]
packages = ["src/getiprompt", "src/web_ui"]

[project.optional-dependencies]
extras = [
    "xformers==0.0.30",
]
dev = [
    "ruff==0.11.12",
    "pre-commit==4.2.0",
    "pytest==8.4.0",
    "build>=1.2.2.post1",
    "twine>=6.1.0",
]

full = [
    "getiprompt[dev, extras]",
]

# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
# RUFF CONFIGURATION                                                          #
[tool.ruff]
# Enable preview features
preview = true

# Enable rules
lint.select = [
    "F",    # Pyflakes (`F`)
    "E",    # pycodestyle error (`E`)
    "W",    # pycodestyle warning (`W`)
    "C90",  # mccabe (`C90`)
    "I",    # isort (`I`)
    "N",    # pep8-naming (`N`)
    "D",    # pydocstyle (`D`)
    "UP",   # pyupgrade (`UP`)
    "YTT",  # flake8-2020 (`YTT`)
    "ANN",  # flake8-annotations (`ANN`)
    "S",    # flake8-bandit (`S`)
    "BLE",  # flake8-blind-except (`BLE`)
    "FBT",  # flake8-boolean-trap (`FBT`)
    "B",    # flake8-bugbear (`B`)
    "A",    # flake8-builtins (`A`)
    #"COM",  # flake8-commas (`COM`)
    "CPY",  # flake8-copyright (`CPY`)
    "C4",   # flake8-comprehensions (`C4`)
    "DTZ",  # flake8-datatimez (`DTZ`)
    "T10",  # flake8-debugger (`T10`)
    "EM",   # flake8-errmsg (`EM`)
    "FA",   # flake8-future-annotations (`FA`)
    "ISC",  # flake8-implicit-str-concat (`ISC`)
    "ICN",  # flake8-import-conventions (`ICN`)
    "PIE",  # flake8-pie (`PIE`)
    "PT",   # flake8-pytest-style (`PT`)
    "RSE",  # flake8-raise (`RSE`)
    "RET",  # flake8-return (`RET`)
    "SLF",  # flake8-self (`SLF`)
    "SIM",  # flake8-simplify (`SIM`)
    "TID",  # flake8-tidy-imports (`TID`)
    "TCH",  # flake8-type-checking (`TCH`)
    "INT",  # flake8-gettext (`INT`)
    "ARG",  # flake8-unsused-arguments (`ARG`)
    "PTH",  # flake8-use-pathlib (`PTH`)
    "TD",   # flake8-todos (`TD`)
    "FIX",  # flake8-fixme (`FIX`)
    "ERA",  # eradicate (`ERA`)
    "PD",   # pandas-vet (`PD`)
    "PGH",  # pygrep-hooks (`PGH`)
    "PL",   # pylint (`PL`)
    "TRY",  # tryceratos (`TRY`)
    "FLY",  # flynt (`FLY`)
    "NPY",  # NumPy-specific rules (`NPY`)
    "PERF", # Perflint (`PERF`)
    "RUF",  # Ruff-specific rules (`RUF`)
    # "FURB", # refurb (`FURB`) - ERROR: Unknown rule selector: `FURB`
    # "LOG",  # flake8-logging (`LOG`) - ERROR: Unknown rule selector: `LOG`
]

lint.ignore = [
    # pydocstyle
    "D100", # Missing docstring in public module
    "D107", # Missing docstring in __init__

    # pylint
    "PLR0913", # Too many arguments to function call
    "PLR2004", # consider replacing with a constant variable
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements

    # NOTE: Disable the following rules for now.
    "A004", # import is shadowing a Python built-in
    "A005", # Module is shadowing a Python built-in
    "B909", # Mutation to loop iterable during iteration
    "PLC2701", # Private name import
    "PLC0415", # import should be at the top of the file
    "PLR0917", # Too many positional arguments
    "E226", # Missing whitespace around arithmetic operator
    "E266", # Too many leading `#` before block comment

    "F822", # Undefined name `` in `__all__`
    "N812", # Import lowercase from uppercase

    "PGH004", # Use specific rule codes when using 'ruff: noqa'
    "PT001", # Use @pytest.fixture over @pytest.fixture()
    "PLR6104", # Use `*=` to perform an augmented assignment directly
    "PLR0914", # Too many local variables
    "PLC0206", # Extracting value from dictionary without calling `.items()`
    "PLC1901", # can be simplified

    "RUF021", # Parenthesize the `and` subexpression
    "RUF022", # Apply an isort-style sorting to '__all__'
    "S404", # `subprocess` module is possibly insecure
    # End of disable rules

    # flake8-annotations
    "ANN002", # Missing type annotation for *args
    "ANN003", # Missing type annotation for **kwargs

    # flake8-bandit (`S`)
    "S101", # Use of assert detected.

    # flake8-boolean-trap (`FBT`)
    "FBT001", # Boolean positional arg in function definition
    "FBT002", # Boolean default value in function definition

    # flake8-datatimez (`DTZ`)
    "DTZ005", # The use of `datetime.datetime.now()` without `tz` argument is not allowed

    # flake8-fixme (`FIX`)
    "FIX002", # Line contains TODO, consider resolving the issue
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["ALL"]
lint.unfixable = []

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0--9_]*[a-zA-Z0-9]+?))$"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "per_segment_anything",
    "src/getiprompt/models/grounding_dino.py",
]

# Same as Black.
line-length = 120

# Assume Python 3.10.
target-version = "py310"

# Allow imports relative to the "src" directory.
src = ["src"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-copyright]
notice-rgx = '# Copyright \(C\) (\d{4}(-\d{4})?) Intel Corporation\r?\n# SPDX-License-Identifier: Apache-2\.0'

# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
# MYPY CONFIGURATION.                                                         #
[tool.mypy]
ignore_missing_imports = true
show_error_codes = true

# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
# NBQA CONFIGURATION                                                          #
[tool.nbqa.addopts]
ruff = ["--ignore=E402"]
