# Copyright (C) 2025 Intel Corporation
# SPDX-License-Identifier: Apache-2.0
[project]
name = "geti-prompt-backend"
version = "0.1.0"
description = "Geti Prompt service"
requires-python = ">=3.12, <3.13"

dependencies = [
    "fastapi~=0.116",
    "uvicorn[standard]~=0.35.0",
    "pydantic-settings~=2.10.1",
    "python-multipart~=0.0.20",
    "SQLAlchemy~=2.0.43",
    "alembic~=1.16.5",
    "numpy~=2.2.6",
    "opencv-python-headless~=4.12.0",
    "aiortc~=1.13.0",
    "pydantic-extra-types~=2.10.6",
    "getiprompt",
    "pillow~=12.0.0"
]

[dependency-groups]
dev = [
    "pytest~=8.3",
    "ruff~=0.11",
    "pre-commit~=4.1",
    "mypy~=1.15",
    "pytest-cov==2.11.1",
    "pytest-html~=4.0.0",
    "pytest-mock~=3.10",
    "httpx~=0.23",
    "types-requests==2.28.11.13",
    "pytest-asyncio==1.2.0",
]

[tool.uv.sources]
getiprompt = { path = "../../library", editable = true }


[tool.pytest.ini_options]
pythonpath = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 120

exclude = [
    ".venv*",
    "app/domain/alembic/*.py",
]
src = ["app"]

[tool.ruff.lint]
select = ["ARG", "E", "F", "I", "N", "UP", "YTT", "ASYNC", "S", "COM", "C4", "FA", "PIE", "PYI", "Q", "RSE", "RET", "SIM",
    "TID", "TC", "PL", "RUF", "C90", "D103", "ANN001", "ANN201", "ANN205", "FAST"]

ignore = ["N801", "N805", "N806", "N807", "N818", "COM812", "RET503", "SIM108", "SIM105", "PLR2004",
    "RUF010", "TC001", "RUF012"]

fixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

# Covers any pytest
"*test*.py" = ["E741", "E402", "E501",
    "S",
    "RET",
    "PL",
    "RUF",
    "SIM",
    "D103",
    "ARG",
    "PYI024",
    "ANN"]

# Covers BDD tests
"*features*.py" = ["E741", "E402", "E501",
    "S",
    "RET",
    "PL",
    "RUF",
    "SIM",
    "D103",
    "ARG",
    "PYI024",
    "ANN"]

[tool.ruff.lint.pylint]
max-args = 7

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
exclude = "^.*/tests/.*\\.py|app/alembic/.*\\.py"
show_error_codes = true
